# EasyWalk-Evaluation

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.cmake
lib/aes-js-3.1.2/: index.js
lib/node-forge-1.3.1/lib/: aes.js  aesCipherSuites.js  asn1-validator.js  asn1.js  baseN.js  cipher.js  cipherModes.js  des.js  ed25519.js  forge.js  form.js  hmac.js  http.js  index.all.js  index.js  jsbn.js  kem.js  log.js  md.all.js  md.js  md5.js  mgf.js  mgf1.js  oids.js  pbe.js  pbkdf2.js  pem.js  pkcs1.js  pkcs12.js  pki.js  (+19 more)
microwalk-js/: CMakeLists.txt  microwalk-nodejs.js  microwalk-quickjs.js  source-config.yml  target.sh  test.js
microwalk-rt/: CMakeLists.txt  bytecode-config.yml  bytecode-target.c  test-runner.sh  wrapper.c  wrapper.h
targets/: target-aesjs-cbc.js  target-aesjs-cfb.js  target-aesjs-ctr.js  target-aesjs-dummy.js  target-aesjs-ecb128.js  target-aesjs-ofb.js  target-aesjs-utilHex.js  target-forge-aes-ecb.js  target-forge-aes-gcm.js  target-forge-b64-decode.js  target-forge-b64-encode.js  target-forge-dummy.js  target-forge-ed25519-sign.js  target-noble-ciphers-aes-cbc.js  target-noble-ciphers-aes-ctr.js  target-noble-ciphers-aes-ecb.js  target-noble-ciphers-aes-gcm.js  target-noble-ciphers-aes-siv.js  target-noble-ciphers-chacha20-poly1305.js  target-noble-ciphers-util.js  target-noble-ciphers-xchacha20-poly1305.js  target-noble-ciphers-xsalsa20-poly1305.js  target-noble-curves-ecdh-secp256k1.js  target-noble-curves-ecdsa-secp256k1.js  target-noble-curves-ecdsa-secp256r1.js  target-noble-curves-ecdsa-secp384r1.js  target-noble-curves-ecdsa-secp521r1.js  target-noble-curves-ed25519.js  target-noble-curves-ed448.js  target-noble-curves-schnorr.js  target-noble-curves-x25519.js  target-noble-curves-x448.js
testcases/target-aesjs-adummy/: t1.testcase
testcases/target-aesjs-cbc/: t2.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-cfb/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-ctr/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-ecb128/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-ecb192/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-ecb256/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-ofb/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-aesjs-utilHex/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-forge-aes-ecb/: t0.testcase  t11.testcase  t15.testcase  t4.testcase
testcases/target-forge-aes-gcm/: t10.testcase  t12.testcase  t13.testcase  t14.testcase  t3.testcase  t5.testcase
testcases/target-forge-b64-decode/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-forge-b64-encode/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
testcases/target-forge-ed25519-sign/: t0.testcase  t1.testcase  t10.testcase  t11.testcase  t12.testcase  t13.testcase  t14.testcase  t15.testcase  t2.testcase  t3.testcase  t4.testcase  t5.testcase  t6.testcase  t7.testcase  t8.testcase  t9.testcase
